@@ -22,27 +22,34 @@ import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static java.util.Collections.emptyList;
 import static org.openrewrite.java.Assertions.java;
 import static org.openrewrite.style.LineWrapSetting.*;
+import static org.openrewrite.style.StyleHelper.fromStyles;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
 class WrapMethodDeclarationParametersTest implements RewriteTest {
 
     @Override
     public void defaults(RecipeSpec spec) {
-        spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-          120,
-          new WrappingAndBracesStyle.IfStatement(false),
-          new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
-          new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, true, false),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap)))));
+        spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+          List.of(
+            fromStyles(
+              new WrappingAndBracesStyle(
+                120,
+                new WrappingAndBracesStyle.IfStatement(false),
+                new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
+                new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, true, false),
+                new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+          null)));
     }
 
     @DocumentExample
@@ -52,16 +59,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, int age, boolean active) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
               String name,
@@ -80,15 +83,11 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               interface Test {
                   void method(String name, int age, boolean active);
               }
               """,
             """
-              package com.example;
-              
               interface Test {
                   void method(
               String name,
@@ -106,16 +105,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, int age) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
               String name,
@@ -133,8 +128,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(
                           String name,
@@ -153,8 +146,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.Map;
               
@@ -164,8 +155,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.Map;
               
@@ -186,16 +175,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String[] names, int[] ages, boolean[][] flags) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
               String[] names,
@@ -214,16 +199,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, int... values) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
               String name,
@@ -241,16 +222,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   Test(String name, int age, boolean active) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   Test(
               String name,
@@ -269,8 +246,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import org.jspecify.annotations.Nullable;
               
               class Test {
@@ -279,8 +254,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import org.jspecify.annotations.Nullable;
               
               class Test {
@@ -300,20 +273,16 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, /* age parameter */ int age, boolean active) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
-              String name,
-              /* age parameter */ int age,
+              String name, /* age parameter */
+              int age,
               boolean active) {
                   }
               }
@@ -328,8 +297,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   String method(String name, int age) {
                       return name;
@@ -337,8 +304,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   String method(
               String name,
@@ -357,8 +322,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.io.IOException;
               
               class Test {
@@ -367,8 +330,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.io.IOException;
               
               class Test {
@@ -388,16 +349,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   public void method(String name, int age) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   public void method(
               String name,
@@ -415,16 +372,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   static void method(String name, int age) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   static void method(
               String name,
@@ -442,15 +395,11 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               abstract class Test {
                   abstract void method(String name, int age);
               }
               """,
             """
-              package com.example;
-              
               abstract class Test {
                   abstract void method(
               String name,
@@ -467,15 +416,11 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               interface Test {
                   void method(String name, int age);
               }
               """,
             """
-              package com.example;
-              
               interface Test {
                   void method(
               String name,
@@ -492,8 +437,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.Map;
               import java.util.function.Function;
@@ -505,8 +448,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               import java.util.Map;
               import java.util.function.Function;
@@ -529,8 +470,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method() {
                   }
@@ -546,8 +485,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method1(String name, int age) {
                   }
@@ -557,8 +494,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method1(
               String name,
@@ -581,8 +516,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   static class Inner {
                       void method(String name, int age) {
@@ -591,8 +524,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   static class Inner {
                       void method(
@@ -612,16 +543,12 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(final String name, final int age) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(
               final String name,
@@ -639,8 +566,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               import java.util.List;
               
               class Test {
@@ -649,8 +574,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               import java.util.List;
               
               class Test {
@@ -671,21 +594,24 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void formatLongLinesOnly() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            80,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, true, false),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  80,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, true, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
-              package com.example;
-              
               class Test {
                   void shortMethod(String n, int a) {
                   }
@@ -695,8 +621,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void shortMethod(String n, int a) {
                   }
@@ -716,21 +640,24 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void preserveMethodWithMaxLengthBelowThreshold() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, false, false),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, int age) {
                   }
@@ -744,29 +671,30 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void openCloseNewLine() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, true),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, true),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(String name, int age, boolean active) {
                   }
               }
               """,
             """
-              package com.example;
-              
               class Test {
                   void method(String name,
               int age,
@@ -785,8 +713,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-              
               class Test {
                   void method(
                       String name,
@@ -804,8 +730,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-
               class Test {
                   void method(String name,
                       int age, boolean active) {
@@ -813,8 +737,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               }
               """,
             """
-              package com.example;
-
               class Test {
                   void method(
               String name,
@@ -833,8 +755,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-
               class Test {
                   void method(String name) {
                   }
@@ -850,8 +770,6 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
         rewriteRun(
           java(
             """
-              package com.example;
-
               class Test {
                   void method() {
                   }
